# Cloud-Intelligence-Platform

./: .cache.sqlite  .dockerignore  .env.example  .gitignore  Cloud Intelligence Platform – Project Report.docx  Dockerfile  LOVABLE_PROMPT.md  Project_Report.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml  ci_cd.yml  deploy.yml
api/: index.py
app/: __init__.py  config.py  main.py  schemas.py
app/agents/: analysis_agent.py  ingestion_agent.py  orchestrator.py  recommendation_agent.py
app/ml/: preprocessing.py  trainer.py
app/ml/pretrained/: .gitkeep
app/models/: schemas.py
app/routers/: agents.py  air_quality.py  cities.py  health.py  predict.py  predictions.py  weather.py
app/services/: air_quality_service.py  geocoding_service.py  ml_service.py  vector_service.py  weather_service.py
data/: cities.json
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: Analysis.jsx  Analytics.jsx  Dashboard.jsx  Predict.jsx
ml/: preprocessing.py  validation.py
ml/training/: train_models.py
prefect_flows/: ingestion.py  training_flow.py
tests/: test_api.py
