[project]
name = "cloud-intelligence-platform"
version = "2.0.0"
description = "Agentic Cloud Intelligence Platform with real-time weather, air quality, and ML-powered insights"
authors = [{name = "Abdul Ahad Ali Khan"}]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
